<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchOrdersActivity" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchOrders_filtersTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
    />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchOrders_firstNameLabel"
            />
            
            <EditText
                android:id="@+id/searchOrders_firstNameFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/searchOrders_filterHint"
                android:ems="10"
            />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchOrders_lastNameLabel"
            />
            
            <EditText
                android:id="@+id/searchOrders_lastNameFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/searchOrders_filterHint"
                android:ems="10"
            />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchOrders_modelLabel"
            />
            
            <Spinner
                android:id="@+id/searchOrders_modelFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
            
        </TableRow>
    </TableLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchOrders_startLabel"
        android:onClick = "start"
    />
    
</LinearLayout>