<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewModelDetailsActivity"
    android:id="@+id/viewModelDetails_layout" >
    
    <TextView
        android:id="@+id/viewModelDetails_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/viewModelDetails_namePlaceholder"
    />
    
    <ProgressBar
        android:id="@+id/viewModelDetails_imageLoadingProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center_horizontal"
    />
    
    <ImageView
        android:id="@+id/viewModelDetails_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:contentDescription="@string/viewModelDetails_imageDescription"
    />
    
    <TextView
        android:id="@+id/viewModelDetails_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeMedium"
        android:text="@string/loremIpsum" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/viewModelDetails_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSizeLarge"
            android:text="@string/viewModelDetails_pricePlaceholder"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeButtons"
            android:text="@string/viewModelDetails_orderLabel"
            android:onClick="order"
        />
        
    </LinearLayout>
    
</LinearLayout>