<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewOrderDetailsActivity" >
    
    <TextView
        android:id="@+id/viewOrderDetails_orderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewOrderDetails_orderLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
    />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_modelNameLabel"
            />
            
            <TextView
                android:id="@+id/viewOrderDetails_modelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_modelNamePlaceholder"
            />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_customerNameLabel"
            />
            
            <TextView
                android:id="@+id/viewOrderDetails_customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_customerNamePlaceholder"
            />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_amountLabel"
            />
            
            <TextView
                android:id="@+id/viewOrderDetails_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_amountPlaceholder"
            />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_deliveryDateLabel"
            />
            
            <TextView
                android:id="@+id/viewOrderDetails_deliveryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/viewOrderDetails_deliveryDatePlaceholder"
            />
            
        </TableRow>
        
    </TableLayout>
    
</LinearLayout>
